chore: remove a file

--- a/ドキュメント/法人化/法人化詳細検討.md
+++ b/ドキュメント/法人化/法人化詳細検討.md
@@ -69,6 +69,23 @@
   * 5〜10年後の建て替えや大規模修繕の頭金になります。
   * **判定**: 大規模修繕が近い（5年以内）ならこちら。
 
+#### パターン3: 「事業拡大」重視（内部留保で再投資）
+
+貴方の「大家業拡大」という目的に特化したプランです。
+役員報酬を生活費の必要最低限に抑え、法人にキャッシュを全力で貯めて、次なる物件購入の頭金にします。
+
+* **戦略**:
+  * **フェーズ1（1-5年目）**: 役員報酬を低く設定（例: 月10万円など）し、毎年400万円以上の現金を法人に留保する。
+  * **フェーズ2（5年目以降）**: 貯まった資金（約2,000万円）を頭金に、融資を引いて **5,000万円〜1億円規模の収益物件（一棟マンション等）** を購入する。
+  * **フェーズ3（拡大期）**: 2棟目からの家賃収入でさらにキャッシュフローを加速させる。
+
+* **メリット**:
+  * **融資実績**: 法人として黒字決算を続けることで、金融機関からの信用（トラックレコード）が作れます。
+  * **再投資効率**: 個人の給与として受け取ると税金・社保で30%引かれますが、法人なら実効税率約22〜25%（小規模法人）で済み、再投資への効率が最大になります。
+  * **建替・土地購入**: 将来、現在の土地の隣地購入や、建替費用としても使えます。
+
+* **判定**: **「将来、事業を拡大したい」「資産家になりたい」** という強い意志がある場合は、このプランが最適解です。
+
 ---
 
 ## 3. 親（お母様）のキャッシュフロー変化
