docs: READMEとCursor設定を更新し、ファイルを削除

--- a/ドキュメント/法人化/お母様向け説明資料_法人化メリット.md
+++ b/ドキュメント/法人化/お母様向け説明資料_法人化メリット.md
@@ -94,12 +94,12 @@ style: |
 | 項目 | 現在（個人事業） | 法人化後 | 備考・根拠 |
 | :--- | :--- | :--- | :--- |
 | **給与収入** | 120万円 | 120万円 | 天引き後の手取額は不変 |
-| **役員報酬** | 0円 | 0円 | 税金圧縮のため **ゼロ** に設定 |
+| **役員報酬** | 0円 | **48万円** | 年48万なら給与所得控除内で**非課税** |
 | **地代収入** | 0円 | 40万円 | 税金がかからない範囲に設定 |
-| **売却代金** | 0円 | 220万円/年 | **非課税**（元本の返済）を増額 |
+| **売却代金** | 0円 | 100万円/年 | **非課税**（元本の返済）を増額 |
 | **家賃収入** | 660万円 | 0円 | 法人へ移転 |
-| **税・社保** | <span style="color:red">▲228万円</span> | <span style="color:blue">ほぼ0万円</span> | 住民税・国保等が**最低額**に |
-| **手取合計** | **552万円** | **約380万円** | ※手取り額はむしろ増えます |
+| **税・社保** | <span style="color:red">▲228万円</span> | <span style="color:blue">▲100万円</span> | 手違いで**全額課税された場合**の最大リスク値 |
+| **手取合計** | **552万円** | **約308万円** | ※生活費(300万)をクリア |
 
 </div>
 
