feat: ファイルを削除しました

--- a/実家の相続について/相続に関して税理士への相談シート.md
+++ b/実家の相続について/相続に関して税理士への相談シート.md
@@ -24,6 +24,13 @@
   * **Q2. 住民票の取り扱い：** 生活拠点は社宅に移しつつ、住民票等は実家のままにする等の運用で、特例適用の余地はあるか？（実態課税の観点から否認リスクが高いか？）
   * **Q3. 施設特例の活用：** 住み替え先を「一般賃貸」ではなく「サービス付き高齢者向け住宅（サ高住）」や「老人ホーム」にした場合、一定の要件（要介護認定など）を満たせば、実家が空き家でも特例対象になるか？
 
+  ### **②【重要】居住実態と特例適用のリスク確認**
+
+   親の希望として「事務所として借りて、住民票は実家に残したまま、実際にはそこで生活する」という案が出ていますが、これは税務調査で**「実家は居住用ではない（＝特例適用不可）」と否認されるリスク**がどの程度あるか確認させてください。 （いわゆる「形式基準」ではなく「実質基準（生活の本拠がどこにあるか）」で判定されるリスク）
+
+  * **Q4. 実質課税の判定：** 住民票が実家にあれば、電気・水道の使用量や郵便物の転送状況などで「生活の実態がない」とバレた場合、相続税の特例（80%減額）は否認されるか？
+  * **Q5. 法人経費の否認：** 「事務所」として契約しながら「居住」していた場合、法人の地代家賃としての経費性が否認され、親への「役員賞与（損金不算入）」と認定されるリスクはあるか？
+
   ### **② 実家の活用方法と評価減の代替案**
 
    もし「住み替え＝特例80%減額不可」となる場合、次善の策として以下の方法は有効か？
